# arcdps-universal-loader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: toolchain-mingw64.cmake
def/: addon.def  arcdps_universal_loader.def  d3d11.def  dxgi.def  version_proxy.def
include/arcdps/: arcdps_structs.h
include/gw2al/: gw2al_api.h  gw2al_lib_imgui.h
include/gw2load/: gw2load_api.h
include/nexus/: Nexus.h
res/: version.rc.in
src/: dllmain.cpp
src/addons/: addon_instance.cpp  addon_instance.h  addon_manager.cpp  addon_manager.h  addon_scanner.cpp  addon_scanner.h
src/api/: arcdps_api.cpp  arcdps_api.h
src/core/: loader_core.cpp  loader_core.h  singleton.cpp  singleton.h
src/detect/: arcdps_detect.cpp  arcdps_detect.h
src/entry/: entry_gw2al.cpp  entry_gw2al.h  entry_gw2load.cpp  entry_gw2load.h  entry_nexus.cpp  entry_nexus.h  entry_proxy.cpp  entry_proxy.h
src/hook/: d3d11_hook.cpp  d3d11_hook.h  wndproc_hook.cpp  wndproc_hook.h
src/imgui/: imgui_impl.cpp  imgui_impl.h
src/proxy/: d3d11_proxy.cpp  d3d11_proxy.h  dxgi_proxy.cpp  dxgi_proxy.h  proxy_common.h  version_proxy.cpp  version_proxy.h
src/ui/: settings_window.cpp  settings_window.h
